fix logo block spacing on safari

--- a/components/LogoBlock/LogoBlock.module.scss
+++ b/components/LogoBlock/LogoBlock.module.scss
@@ -51,6 +51,11 @@
       position: relative;
       height: 120px;
       width: 120px;
+      margin: 0.25rem;
+
+      @media (min-width: 767px) {
+        margin: 0;
+      }
 
       .logo-block__container__logo--image {
         object-fit: cover;
